Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/Broker__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <description>The awards the broker received</description>
    <label>Awards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>