Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/Broker__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>Background details about the Broker</description>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>