Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/Broker__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Store the Hiring date of the broker.</description>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>