Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/Broker__c/fields/Specializations__c.field-meta.xml
<CustomField>
    <fullName>Specializations__c</fullName>
    <description>What is the broker specialization area?</description>
    <label>Specializations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>Family Homes</fullName>
            </value>
            <value>
                <fullName>City Living</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>First-time Buyers</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>Historic Homes</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>